fix fade out scrollbar

--- a/droplist-filler-app/src/app/drop-selector/drop-list/drop-list.component.css
+++ b/droplist-filler-app/src/app/drop-selector/drop-list/drop-list.component.css
@@ -3,7 +3,8 @@ app-product-item {
 }
 
 .wrapper {
-    height:inherit;
+    max-height:100%;
+    position: relative;
 }
 
 .container {
